--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/three": "^0.160.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.3",
     "react-globe.gl": "^2.27.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
